Name:                 bitset
Version:              1.4.8
Synopsis:             A space-efficient set data structure.
Description:
  A /bit set/ is a compact data structure, which maintains a set of members
  from a type that can be enumerated (i. e. has an `Enum' instance).
Category:             Data Structures
License:              MIT
License-file:         LICENSE
Data-files:           CHANGES
Author:               Sergei Lebedev <superbobry@gmail.com>
                    , Aleksey Kladov <aleksey.kladov@gmail.com>
                    , Fedor Gogolev <knsd@knsd.net>
Maintainer:           superbobry@gmail.com
Bug-reports:          http://github.com/lambda-llama/bitset/issues
Stability:            Experimental
Cabal-Version:        >= 1.12
Build-type:           Custom
Tested-with:          GHC == 7.4.1, GHC == 7.6.3, GHC == 7.8.4
Extra-Source-Files:   bin/mkDerivedGmpConstants.c, include/bitset.h

Source-repository head
  Type:     git
  Location: https://github.com/lambda-llama/bitset

Library
  Hs-source-dirs:     src
  Ghc-options:        -Wall -fno-warn-orphans
  Default-language:   Haskell2010
  Other-extensions:   CPP, NamedFieldPuns, MagicHash, UnboxedTuples,
                      BangPatterns, ForeignFunctionInterface,
                      GHCForeignImportPrim, MagicHash,
                      UnliftedFFITypes, UnboxedTuples,
                      GeneralizedNewtypeDeriving, TypeFamilies,
                      DeriveDataTypeable

  C-sources:          cbits/gmp-extras.cmm
  Include-dirs:       cbits, include

  if os(windows)
    Extra-libraries:  gmp-10
  else
    Extra-libraries:  gmp

  Build-depends:      base                       >= 4.4.0 && < 4.8
                    , deepseq
                    , integer-gmp
                    , ghc-prim

  Exposed-modules:    Data.BitSet
                    , Data.BitSet.Dynamic
                    , Data.BitSet.Generic
                    , Data.BitSet.Word
  Other-modules:      GHC.Integer.GMP.PrimExt
                    , GHC.Integer.GMP.TypeExt

Test-suite bitset-tests
  Hs-source-dirs:     tests
  Ghc-options:        -Wall -O2 -fno-warn-orphans
  Default-language:   Haskell2010
  Other-extensions:   CPP

  Type:               exitcode-stdio-1.0
  Main-is:            Tests.hs

  Build-depends:      base
                    , QuickCheck
                    , tasty
                    , tasty-quickcheck
                    , bitset

Benchmark bitset-benchmarks
  Hs-source-dirs:     src benchmarks
  Ghc-options:        -Wall -fno-warn-orphans -O2 -optc-O3 -optc-msse4.1
  Default-language:   Haskell2010
  Other-extensions:   CPP, ExistentialQuantification

  C-sources:          cbits/gmp-extras.cmm
  Include-dirs:       cbits, include
  Extra-libraries:    gmp

  Type:               exitcode-stdio-1.0
  Main-is:            Benchmarks.hs

  Build-depends:      base
                    , deepseq
                    , integer-gmp
                    , ghc-prim

                    , criterion
                    , containers
                    , random
                    , random-shuffle
