Cabal-Version:        2.2
Name:                 bitset
Version:              1.5.0
Synopsis:             A space-efficient set data structure.
Description:
  A /bit set/ is a compact data structure, which maintains a set of members
  from a type that can be enumerated (i. e. has an `Enum' instance).
Category:             Data Structures
License:              MIT
License-file:         LICENSE
Data-files:           CHANGES
Author:               Sergei Lebedev <superbobry@gmail.com>
                    , Aleksey Kladov <aleksey.kladov@gmail.com>
                    , Fedor Gogolev <knsd@knsd.net>
Maintainer:           superbobry@gmail.com
Bug-reports:          http://github.com/lambda-llama/bitset/issues
Stability:            Experimental
Tested-with:          GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.4

Source-repository head
  Type:     git
  Location: https://github.com/lambda-llama/bitset

Common common-options
  Ghc-options:        -Wall -fno-warn-orphans
  Default-language:   Haskell2010
  Default-extensions: CPP, NamedFieldPuns, MagicHash, UnboxedTuples,
                      BangPatterns, MagicHash, UnboxedTuples,
                      GeneralizedNewtypeDeriving, TypeFamilies,
                      DeriveDataTypeable

  Build-depends:      base                       >= 4.8.0 && < 5.0

Library
  Import:             common-options
  Hs-source-dirs:     src
  
  Build-depends:      deepseq
                    , integer-gmp
                    , ghc-prim

  Exposed-modules:    Data.BitSet
                    , Data.BitSet.Dynamic
                    , Data.BitSet.Generic
                    , Data.BitSet.Word

Test-suite bitset-tests
  Import:             common-options
  Hs-source-dirs:     tests

  Type:               exitcode-stdio-1.0
  Main-is:            Tests.hs

  Build-depends:      bitset
                    , QuickCheck
                    , tasty
                    , tasty-quickcheck

Benchmark bitset-benchmarks
  Import:             common-options
  Hs-source-dirs:     benchmarks

  Type:               exitcode-stdio-1.0
  Main-is:            Benchmarks.hs

  Build-depends:      bitset
                    , deepseq
                    , criterion
                    , containers
                    , random
                    , random-shuffle
