Name:                 bitset-benchmarks
Version:              0
Cabal-version:        >= 1.12
Build-type:           Simple

Executable bitset-benchmarks
  Main-is: Benchmarks.hs
  Hs-source-dirs:     ../src .
  Ghc-options:        -Wall -O2
  Default-language:   Haskell2010
  Type:               exitcode-stdio-1.0

  Other-modules:      Data.BitSet

  Build-depends:      base                        >= 4.5.1 || < 4.7
                    , deepseq                     == 1.3.*

                    , criterion                   == 0.6.*
                    , containers                  == 0.5.*
