Name:                 bitset-benchmarks
Version:              0
Cabal-version:        >= 1.12
Build-type:           Simple

Executable bitset-benchmarks
  Main-is: Benchmarks.hs
  Hs-source-dirs:     ../src .
  Ghc-options:        -Wall -O2 -optc-O3 -optc-msse4.1 -fno-warn-orphans
  Default-language:   Haskell2010

  Other-modules:      Data.BitSet

  Build-depends:      base                        >= 4.4.0 || < 4.7
                    , deepseq                     == 1.3.*
                    , integer-gmp
                    , ghc-prim

                    , criterion                   == 0.6.*
                    , containers                  >= 0.4.2
